adjusted media queries, fixed bug where pie chart does not display on mobile

--- a/react-app/src/components/homepage_components/homepage_stylsheets/Home.css
+++ b/react-app/src/components/homepage_components/homepage_stylsheets/Home.css
@@ -58,8 +58,8 @@
 
 #charts_panel {
     height: 55vh;
-    width: 47.5vw;
-    padding: 2.5vh 2.5vw;
+    width: 100%;
+    padding: 2.5vh 0;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -97,24 +97,24 @@
 
 .chart_box {
     display: flex;
-    height: 45vh;
-    width: 30vw;
-    justify-content: space-around;
+    height: 50vh;
+    width: 50%;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
 }
 
 .main_chart_container {
     display: flex;
-    justify-content: space-evenly;
-    width: 90%;
+    justify-content: center;
+    width: 100%;
     align-items: center;
     flex-direction: row;
 }
 
 .chart_description {
     display: flex;
-    width: 70%;
+    width: 80%;
     text-align: justify;
     color: #D5D7E0;
 }
@@ -122,7 +122,11 @@
 .summary_description {
     display: flex;
     justify-content: flex-start;
-    width: 95%;
-    padding-left: 5%;
+    width: 100%;
     text-align: left;
+}
+
+.pie_chart {
+    width: 100%;
+    height: 320px;
 }
